--- a/css/category.css
+++ b/css/category.css
@@ -21,13 +21,13 @@
 }
 
 .category-box {
-    color: white;
+    /* color: white; */
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 2px 5px rgba(6, 31, 110, 0.342);
     transition: transform 0.3s, box-shadow 0.3s;
     padding: 10px;
-    background: var(--accent-color);
+    background: var(--background-color2);
 }
 
 .category-image {
@@ -35,7 +35,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-color: #2e5aaa;
+    /* background-color: #2e5aaa; */
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.205);
 }
 
@@ -62,7 +62,8 @@
     box-shadow: 0 4px 10px rgba(5, 27, 97, 0.486);
 }
 .category-box:hover .explore-btn{
-    background-color: #30528F;
+    background-color: var(--secondary-color);
+    color: var(--light-color);
 }
 
 .view-btn {
@@ -77,7 +78,6 @@
     margin-top: 2rem;
 }
 .explore-btn{
-    
     color: white;
     border: none;
     padding: 5px 16px;
@@ -88,8 +88,12 @@
 }
 .category-description{
     line-height: 20px;
-    font-weight: 300;
-    font-size: 0.8rem;
+    font-weight: 400;
+    font-size: 0.9rem;
+    color: var(--primary-color);
+}
+.category-title{
+    color: var(--secondary-color);
 }
 
 /* sidebar css start here */
@@ -98,31 +102,32 @@
   top: 6rem;      /* how far from the top it should stick */
   height: 300px;  /* allow dynamic height */
   z-index: 999;
-  background: #1d458f;
+  background: var(--background-color);
+  box-shadow: 1px 2px 7px 0 rgb(4 8 65 / 26%);
 }
-.nav-item{
+.side-nav-item{
     transition: all 0.4s ease-in-out;
     border-radius: 6px;
 }
-.nav-item a {
+.side-nav-item a {
   display: block;                /* ensures the hover area covers full width */
   padding: 8px 12px;             /* consistent spacing */
   border-radius: 6px;
-  color: #fff;
   text-decoration: none;
   transition: all 0.3s ease-in-out;
+  color: var(--dark-color);
 }
 
-.nav-item:hover {
+.side-nav-item:hover {
   transform: translateX(5px);    /* subtle slide to the right */
 }
-.nav-item:hover a {
-  background: rgba(255, 255, 255, 0.15);  /* light highlight */
-  color: #fff;                            /* keep text white */
+.side-nav-item:hover a {
+  /* background: rgba(200, 204, 250, 0.452); */
+  /* color: #fff;                            keep text white */
   box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.2);
 }
 .sidebar-heading{
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid var(--dark-color);
     padding-bottom: 5px;
 }
 
