--- a/css/style.css
+++ b/css/style.css
@@ -36,85 +36,131 @@ img {
 }
 
 header {
-    position: sticky;
-    top: 0;
-    z-index: 1000;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
 
-header .logo {
-    width: 70px;
-    height: auto;
-    /* border: 1px solid #d60202; */
+.logo {
+  display: inline-block;
+  padding: 6px;                      /* add a little inner spacing */
+  background: rgba(255, 255, 255, 0.3); /* semi-transparent white */
+  border-radius: 50%;                /* perfect circle */
+  backdrop-filter: blur(6px);        /* frosted glass effect */
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* soft shadow */
+  transition: all 0.3s ease-in-out;  /* smooth hover transition */
 }
 
-.banner {
-    height: 80vh;
-    background: linear-gradient(45deg, #30528F, #001336);
-    position: relative;
+.logo img {
+  width: 70px;
+  height: auto;
+  border-radius: 50%;
 }
 
-.banner-image {
-    width: 23vw;
-    /* height: auto; */
-    float: right;
-    position: relative;
-    top: 3rem;
-    box-shadow: 0px;
-    right: 3rem;
+/* Optional: hover glow effect */
+.logo:hover {
+  background: rgba(255, 255, 255, 0.5);
+  transform: scale(1.05);
 }
 
-.factory-img {
-    width: 70%;
-    position: absolute;
-    bottom: 0;
+
+.navbar {
+  background: linear-gradient(180deg, #1f355d, #001336);
+  padding: 0.8rem 2rem;
+      box-shadow: 0px 9px 12px 5px rgba(139, 139, 139, 0.137);
+}
+.nav-bg{
+    background: linear-gradient(180deg, #1f355d, #001336cc);
+    box-shadow: none;
 }
 
+/* nav links */
 .nav-link {
-    color: aliceblue;
-    font-weight: 500;
+  color: aliceblue !important;
+  font-weight: 500;
+  transition: 0.3s;
 }
 
-.nav-link:hover {
-    color: #4785f8;
+.nav-link:hover,
+.nav-link.active {
+  color: #4785f8 !important;
+  border-bottom: 1px solid #4785f8;
 }
 
-.active {
-    color: #4785f8 !important;
-    border-bottom: 1px solid #4785f8;
-}
-
-.navbar-collapse {
-    justify-content: center;
-    gap: 50px;
-}
-
-.navbar-row {
-    /* background: #8d9ab2ab; */
-}
-
+/* search bar */
 .search-input {
-    background: rgba(255, 255, 255, 0.116);
-    border: 1px solid rgb(253, 253, 253);
-    /* width: 70%; */
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid #fff;
+  color: #fff;
 }
 
 .search-input::placeholder {
-    color: rgb(148, 148, 148);
+  color: rgb(180, 180, 180);
 }
 
 .search-btn {
-    background: #294b8b;
-    color: white;
-    border: none;
-    padding: 5px 15px;
-    border-radius: 5px;
-    cursor: pointer;
+  background: #198754;
+  color: white;
+  border: none;
+  padding: 5px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.menu-bar {
+  color: #fff ; 
+  border: none;
+  font-size: 1.5rem;
+}
+.navbar-toggler:focus,
+.navbar-toggler:active {
+  box-shadow: none !important;   /* no outline glow on click */
+  outline: none !important;
+}
+.search-icon{
+    color: #fff;
+    font-size: 1.3rem;
+    display: none !important;
+}
+
+
+/* banner section */
+
+.banner {
+  height: 70vh;
+  background: linear-gradient(45deg, #30528F, #001336);
+  position: relative;
+  overflow: hidden;
+  margin-top: 0; /* small overlap with navbar if needed */
+}
+
+.banner-image {
+  width: 23vw;
+  position: absolute;
+  right: 3rem;
+  top: 8rem;
+}
+
+.factory-img {
+  width: 70%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 .banner-content {
-    width: 45%;
-    margin: 6rem auto 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+  width: 60%;
 }
+.banner-text{
+    width: 65%;
+}
+
+
 
 /* category css start here  */
 .category-section {
@@ -130,7 +176,7 @@ header .logo {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 200px;
+    height: 250px;
 }
 
 .commercial {
@@ -138,7 +184,7 @@ header .logo {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 200px;
+    height: 250px;
 }
 
 .industrial {
@@ -146,21 +192,20 @@ header .logo {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 200px;
+    height: 250px;
 }
 
 .outdoor {
-    background-image: url(../images/outdoor.jpg);
+    background-image: url(../images/outdoor.webp);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 200px;
+    height: 250px;
 }
 
 .item {
     position: relative;
     overflow: hidden;
-    /* border-radius: 10px; */
 }
 
 .category-name {
@@ -190,14 +235,7 @@ header .logo {
     width: 7rem;
 }
 
-.read-more-btn {
-    background-color: #30528F;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-}
+
 
 .about-container {
     position: relative;
@@ -334,7 +372,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(../images/lighting-home_759_getty.avif);
+    background-image: url(../images/category-banner.jpeg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -349,7 +387,10 @@ body {
 .form-text {
     color: white;
 }
-
+.map{
+    border-radius: 5px;
+    overflow: hidden;
+}
 
 /* footer section start here */
 .footer-section {
@@ -384,4 +425,16 @@ li a {
 
     text-align: center;
     padding: 10px 0;
+}
+
+@media (max-width:992px) {
+    .search-icon{
+        display: block !important;
+    }
+    .search-sec{
+        display: none !important;
+    }
+    .logo{
+        width: 50px;
+    }
 }
