--- a/css/category.css
+++ b/css/category.css
@@ -21,7 +21,6 @@
 }
 
 .category-box {
-    /* color: white; */
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 2px 5px rgba(6, 31, 110, 0.342);
@@ -35,7 +34,6 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    /* background-color: #2e5aaa; */
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.205);
 }
 
@@ -85,6 +83,7 @@
     display: block;
     margin-top: 0.5rem;
     width: 100%;
+    background: #4f6691;
 }
 .category-description{
     line-height: 20px;
@@ -104,6 +103,9 @@
   z-index: 999;
   background: var(--background-color);
   box-shadow: 1px 2px 7px 0 rgb(4 8 65 / 26%);
+}
+.side-nav-link{
+    color: var(--dark-color) !important;
 }
 .side-nav-item{
     transition: all 0.4s ease-in-out;
@@ -130,7 +132,12 @@
     border-bottom: 1px solid var(--dark-color);
     padding-bottom: 5px;
 }
-
+.side-nav-link{
+    border-bottom: 1px solid transparent;
+}
+.side-nav-link:hover{
+    border-bottom: 1px solid var(--primary-color);
+}
 /* asidebar css start here */
 
 .asidebar-box{
